--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -268,7 +268,7 @@ aside p {
       box-shadow: 0px 0px 10px #a61853;
       scale: 1.01;
     }
-    &:hover .imgWrap button {
+    &:hover .imgWrap .button {
       scale: 1;
     }
     &:hover .imgWrap img {
@@ -285,7 +285,7 @@ aside p {
       background-color: white;
       transition: all 0.5s ease;
 
-      button {
+      .button {
         position: absolute;
         top: 35%;
         left: 50%;
