--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -42,9 +42,11 @@
     h3 {
         margin-top: 0.5em;
     }
-ul{
-    max-width: 400px;
-}
+
+    ul {
+        max-width: 400px;
+    }
+
     li {
         list-style: square;
 
@@ -54,6 +56,16 @@ ul{
         }
     }
 
+}
+
+.pModel {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    .list span {
+        z-index: 0;
+    }
 }
 
 @keyframes rot {
