--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -62,9 +62,225 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    position: relative;
 
     .list span {
         z-index: 0;
+    }
+
+    &>img {
+        width: 450px;
+        position: absolute;
+        bottom: -200px;
+        left: 0;
+        pointer-events: none;
+    }
+}
+
+.pTable {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    text-transform: uppercase;
+
+    .table{
+        width: 100%;
+        min-height: 90vh;
+        background-color: white;
+        border-radius: 15px;
+    }
+}
+
+.pCont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    .cont-form {
+        min-width: 35vw;
+    }
+
+    .choice {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding: 12px 16px;
+        margin-bottom: 15px !important;
+        border-radius: 20px;
+        background: none;
+        color: var(--text-dark);
+        border: 1px solid var(--text-dark);
+
+        label{
+            position: absolute;
+            top: -7px;
+            left: 15px;
+            padding: 0.2em;
+            font-size: 11px;
+            text-transform: uppercase;
+            background: var(--bg-color);
+        }
+
+        #Choice {
+            background: none;
+            border: none;
+            color: gray;
+            text-transform: uppercase;
+
+            &:focus,
+            &:focus-within {
+                border: none;
+                outline: none;
+            }
+        }
+    }
+
+    .select {
+        position: relative;
+        overflow: hidden;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-bottom: 0px;
+        border-radius: 20px;
+        text-transform: uppercase;
+        font-size: 12px;
+        border: 1px solid black;
+        margin-bottom: 1.5em;
+        box-shadow: 0px 1em 2em -1.5em rgba(0, 0, 0, .5);
+
+        >i.toggle {
+            position: absolute;
+            z-index: 4;
+            right: 1.5em;
+            top: 1.6em;
+            color: #ffffff
+        }
+
+        .title,
+        .placeholder {
+            position: relative;
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding: 1.5em 2em;
+            /* background: rgba(255, 255, 255, 1); */
+            border-top: 1px solid rgba(0, 0, 0, .05);
+            cursor: pointer;
+        }
+
+        &>input {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            display: block;
+            opacity: 0;
+            cursor: pointer;
+
+            &:checked {
+                ~i.toggle.icon-arrow-down {
+                    display: none;
+                }
+
+                ~i.toggle.icon-arrow-up {
+                    display: block;
+                }
+
+                div.options label.option .title {
+                    display: none !important;
+                }
+            }
+
+            &:not(:checked) {
+                z-index: 4;
+
+                ~label.option {
+                    >span.title {
+                        display: none;
+                    }
+                }
+
+                ~i.toggle.icon-arrow-up {
+                    display: none;
+                }
+
+                ~i.toggle.icon-arrow-down {
+                    display: block;
+                }
+            }
+
+            &:disabled {
+                cursor: no-drop;
+            }
+        }
+
+        &>span.placeholder {
+            position: relative;
+            z-index: 0;
+            display: inline-block;
+            width: 100%;
+            color: #999;
+            border-top: 0px;
+        }
+
+        label.option {
+            display: block;
+            overflow: hidden;
+            z-index: 1;
+            width: 100%;
+            transition: all 1s ease-out;
+
+            span.title {
+                position: relative;
+                z-index: 2;
+                transition: background .3s ease-out;
+
+                i.icon {
+                    padding-right: 8px;
+                    color: rgba(146, 168, 209, 1);
+                }
+
+                &:hover {
+                    color: #fff;
+                    background: rgba(255, 255, 255, .3);
+                    box-shadow: inset 0px 1px 0px rgba(0, 0, 0, .1);
+                }
+            }
+
+            input {
+                display: none;
+
+                &:checked~span.title {
+                    position: absolute;
+                    display: block;
+                    z-index: 3;
+                    top: 0px;
+                    font-size: 12px;
+                    background: #fff;
+                    border-top: 0px;
+                    box-shadow: none;
+                    color: inherit;
+                    width: 100%;
+                }
+
+                &:disabled {
+                    &~span.title {
+                        background: #f9f9f9 !important;
+                        color: #aaa;
+
+                        &:hover {
+                            color: #aaa;
+                            background: none;
+                            cursor: no-drop;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
