--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -236,9 +236,6 @@
     border-radius: 20px !important;
     width: 90% !important;
   }
-  .product {
-    height: 260vh;
-  }
   .product .prodHead {
     display: flex;
     flex-direction: column;
@@ -246,19 +243,21 @@
   .product .prodHead .prodBtn {
     order: 2;
   }
-  .product .list {
+  .list {
     flex-direction: column;
     gap: 20px;
+    margin-block: 5em;
   }
-  .product .list h5 {
+  .list h5 {
     background: white;
+    z-index: 1;
   }
-  .product .list span {
+  .list span {
     position: absolute;
     top: 15px;
     left: 50%;
     translate: -50%;
-    rotate: 180deg;
+    rotate: 0deg;
     transform: scale(1.15);
     z-index: -1;
   }
