--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -264,7 +264,7 @@
     }
   }
   .product {
-    height: 260vh;
+    // height: 260vh;
 
     .prodHead {
       display: flex;
@@ -273,23 +273,25 @@
         order: 2;
       }
     }
+    
+  }
+  .list {
+    flex-direction: column;
+    gap: 20px;
+    margin-block: 5em;
 
-    .list {
-      flex-direction: column;
-      gap: 20px;
-
-      h5 {
-        background: white;
-      }
-      span {
-        position: absolute;
-        top: 15px;
-        left: 50%;
-        translate: -50%;
-        rotate: 180deg;
-        transform: scale(1.15);
-        z-index: -1;
-      }
+    h5 {
+      background: white;
+      z-index: 1;
+    }
+    span {
+      position: absolute;
+      top: 15px;
+      left: 50%;
+      translate: -50%;
+      rotate: 0deg;
+      transform: scale(1.15);
+      z-index: -1;
     }
   }
   .LogoDisp{
