--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -6,6 +6,7 @@
 
     h1 {
         font-size: clamp(3.25rem, 10vw, 7.55rem);
+        overflow-wrap: anywhere;
     }
 }
 
@@ -63,9 +64,15 @@
     flex-direction: column;
     justify-content: space-around;
     position: relative;
+    gap: 7vh;
 
     .list span {
         z-index: 0;
+    }
+
+    .list h5 {
+        background: var(--bg-color);
+        z-index: 1;
     }
 
     &>img {
@@ -83,7 +90,7 @@
     gap: 5vh;
     text-transform: uppercase;
 
-    .table{
+    .table {
         width: 100%;
         min-height: 90vh;
         background-color: white;
@@ -96,6 +103,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    text-align: center;
+    gap: 5vh;
+
 
     .cont-form {
         min-width: 35vw;
@@ -112,7 +122,7 @@
         color: var(--text-dark);
         border: 1px solid var(--text-dark);
 
-        label{
+        label {
             position: absolute;
             top: -7px;
             left: 15px;
@@ -125,7 +135,7 @@
         #Choice {
             background: none;
             border: none;
-            color: gray;
+            color: var(--text-dark);
             text-transform: uppercase;
 
             &:focus,
@@ -291,5 +301,17 @@
 
     100% {
         rotate: 360deg;
+    }
+}
+
+
+@media (max-width: 450px) {
+    .pFeature {
+        flex-direction: column-reverse;
+        gap: 2em;
+    }
+
+    .pInfo {
+        grid-template-columns: auto;
     }
 }
