--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -267,6 +267,24 @@ aside p {
 }
 
 @media (max-width: 450px) {
+  .list {
+    flex-direction: column;
+    gap: 20px;
+    margin-block: 5em;
+  }
+  .list h5 {
+    background: white;
+    z-index: 1;
+  }
+  .list span {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    translate: -50%;
+    rotate: 0deg;
+    transform: scale(1.15);
+    z-index: -1;
+  }
   .paragraph {
     font-size: 30px;
   }
