--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -367,6 +367,26 @@ aside p {
 }
 
 @media (max-width: 450px) {
+  .list {
+    flex-direction: column;
+    gap: 20px;
+    margin-block: 5em;
+
+    h5 {
+      background: white;
+      z-index: 1;
+    }
+    span {
+      position: absolute;
+      top: 15px;
+      left: 50%;
+      translate: -50%;
+      rotate: 0deg;
+      transform: scale(1.15);
+      z-index: -1;
+    }
+  }
+  
   .paragraph {
     font-size: 30px;
   }
