--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -310,6 +310,32 @@
         flex-direction: column-reverse;
         gap: 2em;
     }
+    .pModel{
+        .list {
+            flex-direction: column;
+            gap: 20px;
+            margin-block: 5em;
+        
+            h5 {
+              /* background: white; */
+              z-index: 1;
+            }
+            span {
+              position: absolute;
+              top: 15px;
+              left: 50%;
+              translate: -50%;
+              rotate: 0deg;
+              transform: scale(1.15);
+              z-index: 0;
+            }
+          }
+          
+    &>img{
+        width: 200px;
+        /* position: sticky; */
+        bottom: 0px;
+    }}
 
     .pInfo {
         grid-template-columns: auto;
