--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -1,347 +1,293 @@
 .prodHero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-inline: 10vw;
-
-    h1 {
-        font-size: clamp(3.25rem, 10vw, 7.55rem);
-        overflow-wrap: anywhere;
-    }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-inline: 10vw;
+}
+.prodHero h1 {
+  font-size: clamp(3.25rem, 10vw, 7.55rem);
+  overflow-wrap: anywhere;
 }
 
 .pInfo {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    justify-items: stretch;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-
-    img {
-        inline-size: -webkit-fill-available;
-        animation: rot 10s linear infinite both;
-    }
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: stretch;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+.pInfo img {
+  inline-size: -webkit-fill-available;
+  animation: rot 10s linear infinite both;
 }
 
 .pFeature {
-    height: -webkit-fill-available;
-    display: flex;
-    font-size: 13px;
-    align-content: flex-end;
-    text-transform: uppercase;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    h6 {
-        color: gray;
-        margin-block: 1em;
-        font-size: 12px;
-    }
-
-    h3 {
-        margin-top: 0.5em;
-    }
-
-    ul {
-        max-width: 400px;
-    }
-
-    li {
-        list-style: square;
-
-        &::marker {
-            color: var(--accent);
-            font-size: 25px;
-        }
-    }
-
+  height: -webkit-fill-available;
+  display: flex;
+  font-size: 13px;
+  align-content: flex-end;
+  text-transform: uppercase;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.pFeature h6 {
+  color: gray;
+  margin-block: 1em;
+  font-size: 12px;
+}
+.pFeature h3 {
+  margin-top: 0.5em;
+}
+.pFeature ul {
+  max-width: 400px;
+}
+.pFeature li {
+  list-style: square;
+}
+.pFeature li::marker {
+  color: var(--accent);
+  font-size: 25px;
 }
 
 .pModel {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    position: relative;
-    gap: 7vh;
-
-    .list span {
-        z-index: 0;
-    }
-
-    .list h5 {
-        background: var(--bg-color);
-        z-index: 1;
-    }
-
-    &>img {
-        width: 450px;
-        position: absolute;
-        bottom: -200px;
-        left: 0;
-        pointer-events: none;
-    }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: relative;
+  gap: 7vh;
+}
+.pModel .list span {
+  z-index: 0;
+}
+.pModel .list h5 {
+  background: var(--bg-color);
+  z-index: 1;
+}
+.pModel > img {
+  width: 450px;
+  position: absolute;
+  bottom: -200px;
+  left: 0;
+  pointer-events: none;
 }
 
 .pTable {
-    display: flex;
-    flex-direction: column;
-    gap: 5vh;
-    text-transform: uppercase;
-
-    .table {
-        width: 100%;
-        min-height: 90vh;
-        background-color: white;
-        border-radius: 15px;
-    }
+  display: flex;
+  flex-direction: column;
+  gap: 5vh;
+  text-transform: uppercase;
+}
+.pTable .table {
+  width: 100%;
+  min-height: 90vh;
+  background-color: white;
+  border-radius: 15px;
 }
 
 .pCont {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center;
-    gap: 5vh;
-
-
-    .cont-form {
-        min-width: 35vw;
-    }
-
-    .choice {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        padding: 12px 16px;
-        margin-bottom: 15px !important;
-        border-radius: 20px;
-        background: none;
-        color: var(--text-dark);
-        border: 1px solid var(--text-dark);
-
-        label {
-            position: absolute;
-            top: -7px;
-            left: 15px;
-            padding: 0.2em;
-            font-size: 11px;
-            text-transform: uppercase;
-            background: var(--bg-color);
-        }
-
-        #Choice {
-            background: none;
-            border: none;
-            color: var(--text-dark);
-            text-transform: uppercase;
-
-            &:focus,
-            &:focus-within {
-                border: none;
-                outline: none;
-            }
-        }
-    }
-
-    .select {
-        position: relative;
-        overflow: hidden;
-        display: block;
-        width: 100%;
-        height: 100%;
-        border-bottom: 0px;
-        border-radius: 20px;
-        text-transform: uppercase;
-        font-size: 12px;
-        border: 1px solid black;
-        margin-bottom: 1.5em;
-        box-shadow: 0px 1em 2em -1.5em rgba(0, 0, 0, .5);
-
-        >i.toggle {
-            position: absolute;
-            z-index: 4;
-            right: 1.5em;
-            top: 1.6em;
-            color: #ffffff
-        }
-
-        .title,
-        .placeholder {
-            position: relative;
-            display: block;
-            width: 100%;
-            height: 100%;
-            padding: 1.5em 2em;
-            /* background: rgba(255, 255, 255, 1); */
-            border-top: 1px solid rgba(0, 0, 0, .05);
-            cursor: pointer;
-        }
-
-        &>input {
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            z-index: 1;
-            width: 100%;
-            height: 100%;
-            display: block;
-            opacity: 0;
-            cursor: pointer;
-
-            &:checked {
-                ~i.toggle.icon-arrow-down {
-                    display: none;
-                }
-
-                ~i.toggle.icon-arrow-up {
-                    display: block;
-                }
-
-                div.options label.option .title {
-                    display: none !important;
-                }
-            }
-
-            &:not(:checked) {
-                z-index: 4;
-
-                ~label.option {
-                    >span.title {
-                        display: none;
-                    }
-                }
-
-                ~i.toggle.icon-arrow-up {
-                    display: none;
-                }
-
-                ~i.toggle.icon-arrow-down {
-                    display: block;
-                }
-            }
-
-            &:disabled {
-                cursor: no-drop;
-            }
-        }
-
-        &>span.placeholder {
-            position: relative;
-            z-index: 0;
-            display: inline-block;
-            width: 100%;
-            color: #999;
-            border-top: 0px;
-        }
-
-        label.option {
-            display: block;
-            overflow: hidden;
-            z-index: 1;
-            width: 100%;
-            transition: all 1s ease-out;
-
-            span.title {
-                position: relative;
-                z-index: 2;
-                transition: background .3s ease-out;
-
-                i.icon {
-                    padding-right: 8px;
-                    color: rgba(146, 168, 209, 1);
-                }
-
-                &:hover {
-                    color: #fff;
-                    background: rgba(255, 255, 255, .3);
-                    box-shadow: inset 0px 1px 0px rgba(0, 0, 0, .1);
-                }
-            }
-
-            input {
-                display: none;
-
-                &:checked~span.title {
-                    position: absolute;
-                    display: block;
-                    z-index: 3;
-                    top: 0px;
-                    font-size: 12px;
-                    background: #fff;
-                    border-top: 0px;
-                    box-shadow: none;
-                    color: inherit;
-                    width: 100%;
-                }
-
-                &:disabled {
-                    &~span.title {
-                        background: #f9f9f9 !important;
-                        color: #aaa;
-
-                        &:hover {
-                            color: #aaa;
-                            background: none;
-                            cursor: no-drop;
-                        }
-                    }
-                }
-            }
-        }
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  gap: 5vh;
+}
+.pCont .cont-form {
+  min-width: 35vw;
+}
+.pCont .choice {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 12px 16px;
+  margin-bottom: 15px !important;
+  border-radius: 20px;
+  background: none;
+  color: var(--text-dark);
+  border: 1px solid var(--text-dark);
+}
+.pCont .choice label {
+  position: absolute;
+  top: -7px;
+  left: 15px;
+  padding: 0.2em;
+  font-size: 11px;
+  text-transform: uppercase;
+  background: var(--bg-color);
+}
+.pCont .choice #Choice {
+  background: none;
+  border: none;
+  color: var(--text-dark);
+  text-transform: uppercase;
+}
+.pCont .choice #Choice:focus, .pCont .choice #Choice:focus-within {
+  border: none;
+  outline: none;
+}
+.pCont .select {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-bottom: 0px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-size: 12px;
+  border: 1px solid black;
+  margin-bottom: 1.5em;
+  box-shadow: 0px 1em 2em -1.5em rgba(0, 0, 0, 0.5);
+}
+.pCont .select > i.toggle {
+  position: absolute;
+  z-index: 4;
+  right: 1.5em;
+  top: 1.6em;
+  color: #ffffff;
+}
+.pCont .select .title,
+.pCont .select .placeholder {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 1.5em 2em;
+  /* background: rgba(255, 255, 255, 1); */
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+}
+.pCont .select > input {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: block;
+  opacity: 0;
+  cursor: pointer;
+}
+.pCont .select > input:checked ~ i.toggle.icon-arrow-down {
+  display: none;
+}
+.pCont .select > input:checked ~ i.toggle.icon-arrow-up {
+  display: block;
+}
+.pCont .select > input:checked div.options label.option .title {
+  display: none !important;
+}
+.pCont .select > input:not(:checked) {
+  z-index: 4;
+}
+.pCont .select > input:not(:checked) ~ label.option > span.title {
+  display: none;
+}
+.pCont .select > input:not(:checked) ~ i.toggle.icon-arrow-up {
+  display: none;
+}
+.pCont .select > input:not(:checked) ~ i.toggle.icon-arrow-down {
+  display: block;
+}
+.pCont .select > input:disabled {
+  cursor: no-drop;
+}
+.pCont .select > span.placeholder {
+  position: relative;
+  z-index: 0;
+  display: inline-block;
+  width: 100%;
+  color: #999;
+  border-top: 0px;
+}
+.pCont .select label.option {
+  display: block;
+  overflow: hidden;
+  z-index: 1;
+  width: 100%;
+  transition: all 1s ease-out;
+}
+.pCont .select label.option span.title {
+  position: relative;
+  z-index: 2;
+  transition: background 0.3s ease-out;
+}
+.pCont .select label.option span.title i.icon {
+  padding-right: 8px;
+  color: rgb(146, 168, 209);
+}
+.pCont .select label.option span.title:hover {
+  color: #fff;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
+}
+.pCont .select label.option input {
+  display: none;
+}
+.pCont .select label.option input:checked ~ span.title {
+  position: absolute;
+  display: block;
+  z-index: 3;
+  top: 0px;
+  font-size: 12px;
+  background: #fff;
+  border-top: 0px;
+  box-shadow: none;
+  color: inherit;
+  width: 100%;
+}
+.pCont .select label.option input:disabled ~ span.title {
+  background: #f9f9f9 !important;
+  color: #aaa;
+}
+.pCont .select label.option input:disabled ~ span.title:hover {
+  color: #aaa;
+  background: none;
+  cursor: no-drop;
 }
 
 @keyframes rot {
-    0% {
-        rotate: 0deg;
-    }
-
-    100% {
-        rotate: 360deg;
-    }
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
 }
-
-
 @media (max-width: 450px) {
-    .pFeature {
-        flex-direction: column-reverse;
-        gap: 2em;
-
-        ul{
-            padding-left: 30px;
-        }
-    }
-    .pModel{
-        .list {
-            flex-direction: column;
-            gap: 20px;
-            margin-block: 5em;
-        
-            h5 {
-              /* background: white; */
-              z-index: 1;
-            }
-            span {
-              position: absolute;
-              top: 15px;
-              left: 50%;
-              translate: -50%;
-              rotate: 0deg;
-              transform: scale(1.15);
-              z-index: 0;
-            }
-          }
-          
-    &>img{
-        width: 200px;
-        /* position: sticky; */
-        bottom: 0px;
-    }}
-
-    .pInfo {
-        grid-template-columns: auto;
-    }
-}
+  .pFeature {
+    flex-direction: column-reverse;
+    gap: 2em;
+  }
+  .pFeature ul {
+    padding-left: 30px;
+  }
+  .pModel .list {
+    flex-direction: column;
+    gap: 20px;
+    margin-block: 5em;
+  }
+  .pModel .list h5 {
+    /* background: white; */
+    z-index: 1;
+  }
+  .pModel .list span {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    translate: -50%;
+    rotate: 0deg;
+    transform: scale(1.15);
+    z-index: 0;
+  }
+  .pModel > img {
+    width: 200px;
+    /* position: sticky; */
+    bottom: 0px;
+  }
+  .pInfo {
+    grid-template-columns: auto;
+  }
+}/*# sourceMappingURL=ProductPage.css.map */
