--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -144,6 +144,7 @@ aside p {
 .wipe {
   --wipe-position: 100%;
   --gradient-length: 20%;
+  mask-image: linear-gradient(to bottom, black var(--wipe-position), transparent calc(var(--wipe-position) + var(--gradient-length)), transparent);
   -webkit-mask-image: linear-gradient(to bottom, black var(--wipe-position), transparent calc(var(--wipe-position) + var(--gradient-length)), transparent);
   transition: --wipe-position 2000ms linear;
 }
@@ -153,6 +154,7 @@ aside p {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  gap: 30px;
 }
 .list span {
   position: absolute;
@@ -266,11 +268,12 @@ aside p {
   width: 100%;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 650px) {
   .list {
     flex-direction: column;
     gap: 20px;
     margin-block: 5em;
+    overflow-x: visible;
   }
   .list h5 {
     background: white;
