--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -17,6 +17,7 @@
     justify-items: stretch;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    overflow: hidden;
 
     img {
         inline-size: -webkit-fill-available;
