--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: var(--text-color);
+  text-transform: uppercase;
 }
 
 button {
