--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -30,6 +30,10 @@
     }
   }
 }
+aside span{
+  mix-blend-mode: difference;
+  filter: grayscale(1) invert(1);
+}
 aside p {
   transition: all 0.5s ease;
   font-family: "MonumentRegular";
