--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -45,7 +45,7 @@ aside p {
 .over-cont:hover,
 .over-scroll:hover {
   p {
-    color: var(--accent);
+    color: black;
     transform: translateY(10px);
     cursor: help;
     opacity: 1;
