product list animation fixed

--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -196,7 +196,7 @@
 @media (max-width: 800px) {
   .hero {
     padding-inline: 10vw;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   .hero > img {
     width: 250px;
