--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -216,7 +216,7 @@
 @media (max-width: 800px) {
   .hero {
     padding-inline: 10vw;
-    justify-content: space-around;
+    justify-content: space-between;
 
     & > img {
       width: 250px;
