--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -209,21 +209,22 @@
     top: 15%;
   }
 }
-@media (max-width: 650px) {
+@media (max-width: 770px) {
   .hero {
     min-height: 100vh;
     padding-inline: 5vw;
+    padding-top: 15vh;
   }
   .hero > img {
     width: 250px;
     position: absolute;
     bottom: -150px;
   }
-  .hero-vid {
-    top: 15% !important;
-    width: 45% !important;
-    height: 200px !important;
-    left: 70% !important;
+  .hero h1 {
+    font-size: clamp(2.15rem, 10vw, 5.55rem);
+  }
+  .hero h3 {
+    font-size: clamp(2rem, 10vw, 3.6rem);
   }
   .redText .text {
     width: 80%;
