--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -230,21 +230,29 @@
     top: 15%;
   }
 }
-@media (max-width: 650px) {
+@media (max-width: 770px) {
   .hero {
     min-height: 100vh;
     padding-inline: 5vw;
+    padding-top: 15vh;
     & > img {
       width: 250px;
       position: absolute;
       bottom: -150px;
     }
+  
+  h1 {
+      font-size: clamp(2.15rem, 10vw, 5.55rem);
+  }
+  h3 {
+    font-size: clamp(2rem, 10vw, 3.6rem);
+}
   }
   .hero-vid {
-    top: 15% !important;
-    width: 45% !important;
-    height: 200px !important;
-    left: 70% !important;
+    // top: 15% !important;
+    // width: 45% !important;
+    // height: 200px !important;
+    // left: 70% !important;
   }
   .redText {
     .text {
