feuillard page completely responsive

--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -248,12 +248,12 @@
     font-size: clamp(2rem, 10vw, 3.6rem);
 }
   }
-  .hero-vid {
-    // top: 15% !important;
-    // width: 45% !important;
-    // height: 200px !important;
-    // left: 70% !important;
-  }
+  // .hero-vid {
+  //   // top: 15% !important;
+  //   // width: 45% !important;
+  //   // height: 200px !important;
+  //   // left: 70% !important;
+  // }
   .redText {
     .text {
       width: 80%;
