--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -125,6 +125,7 @@
 }
 
 .pCont {
+  min-height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -330,9 +331,14 @@
 }
 
 @media (max-width: 770px) {
+  .prodHero h1 {
+    font-size: clamp(2rem, 10vw, 7.55rem);
+    overflow-wrap: anywhere;
+}
   .pFeature {
     flex-direction: column-reverse;
     gap: 2em;
+    width: fit-content;
 
     ul {
       padding-left: 30px;
@@ -372,5 +378,22 @@
 
   .pInfo {
     grid-template-columns: auto;
+    justify-content: unset;
   }
+  .pCont .cont-form {
+    width: 100%;
+}
+}
+@media (max-width: 500px) {
+  .pInfo {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+    h3 {
+      font-size: clamp(1.9rem, 10vw, 3.6rem);
+  }
+  }
+  .pModel .list .listItem .imgWrap img {
+    width: 200px;
+}
+
 }
