--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -58,7 +58,11 @@
     }
   }
 }
-
+:root {
+  --bg-white: hsla(0, 0%, 100%, 0.85); /* Default background color */
+  --bg-black: hsla(0, 0%, 0%, 0.85);  /* Dark background color */
+  --bg-variable:var(--bg-variable)
+}
 .pModel {
   height: 130vh;
   padding-block: 30vh;
@@ -69,6 +73,30 @@
   position: relative;
   gap: 10vh;
   transition: all 0.5s ease;
+  isolation: isolate;
+
+  
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    background: url(/bg.webp);
+    background-size: cover;
+    z-index: -2;
+  }
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    // background-color: rgba(0, 0, 0, 0.9098039216);
+    background-color: var(--bg-variable);
+    transition: all 0.5s ease;
+    z-index: -1;
+  }
 
   .list span {
     z-index: 0;
