navigation animation fixed

--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -61,7 +61,7 @@
 :root {
   --bg-white: hsla(0, 0%, 100%, 0.85); /* Default background color */
   --bg-black: hsla(0, 0%, 0%, 0.85);  /* Dark background color */
-  --bg-variable:var(--bg-variable)
+  --bg-variable:var(--bg-variable);
 }
 .pModel {
   height: 130vh;
@@ -124,7 +124,7 @@
 }
 
   .list h5 {
-    background: black;
+    background: transparent;
     color: white;
     z-index: 1;
   }
