--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -55,7 +55,7 @@
 :root {
   --bg-white: hsla(0, 0%, 100%, 0.85); /* Default background color */
   --bg-black: hsla(0, 0%, 0%, 0.85); /* Dark background color */
-  --bg-variable:var(--bg-variable) ;
+  --bg-variable:var(--bg-variable);
 }
 
 .pModel {
@@ -112,7 +112,7 @@
   width: 250px;
 }
 .pModel .list h5 {
-  background: black;
+  background: transparent;
   color: white;
   z-index: 1;
 }
