animation polished and eased

--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -231,7 +231,7 @@
     padding: 0;
   }
   .redText .text h3 {
-    font-size: 25px;
+    font-size: 2em;
   }
   .videoSec {
     min-height: unset;
