--- a/src/Style/footer.scss
+++ b/src/Style/footer.scss
@@ -1,14 +1,12 @@
 /* Footer Styles */
 .footer {
-    /* height: 50vh; */
     min-height: 40vh;
     padding-top: 3rem;
     padding-bottom: 2rem;
-    /* background: linear-gradient(to bottom, #4e73df, #224abe); */
     color: #000000;
     position: relative;
     z-index: 2;
-
+    scroll-snap-align: none;
 }
 
 .container {
@@ -71,7 +69,6 @@
 .footer-text {
     margin-top: 1rem;
     width: 75%;
-    /* color: #ffffff; */
 }
 
 .footer-column {
@@ -84,7 +81,6 @@
     font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
-    /* color: #ffffff; */
 }
 
 .footer-list {
@@ -109,10 +105,6 @@
     text-decoration: none;
 }
 
-
-/* .footer-bottom a {
-    color: #ffffff;
-} */
 
 .footer-bottom a:hover {
     text-decoration: underline;
