--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -5,8 +5,10 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-color: black;
-    mix-blend-mode: difference;
+    // background-color: var(--bg-color);
+    background-color: hsl(0deg 0% 91% / 85%);
+    backdrop-filter: blur(7px);
+    // mix-blend-mode: difference;
     z-index: 15;
 }
 
@@ -25,7 +27,7 @@
     z-index: 16;
     img {
         transition: all 0.4s ease;
-        filter: contrast(0) brightness(10) grayscale(1);
+        // filter: contrast(0) brightness(10) grayscale(1);
     }
 }
 
@@ -41,10 +43,10 @@
     }
 }
 
-.nav__menu {
-    backdrop-filter: blur(5px);
+// .nav__menu {
+//     // backdrop-filter: blur(5px);
 
-}
+// }
 
 .nav__cta {
     position: relative;
@@ -134,7 +136,7 @@
 }
 
 .nav__link {
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 13px;
     text-transform: uppercase;
     transition: all 0.4s ease;
