tape page setup and linked

--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -17,8 +17,7 @@
   justify-items: stretch;
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  overflow: hidden;
-  padding-block: 10vh;
+  overflow: visible;
 }
 .pInfo img {
   inline-size: -webkit-fill-available;
@@ -37,7 +36,6 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  padding-block: 10vh;
 }
 .pFeature h6 {
   color: gray;
